# learn_xiao

./: xiao.code-workspace
documents/installation/: blackpill_f401ce.txt  crash_elf.txt  cy8cproto_063_ble_pins.txt  cypress.txt  env_script.txt  installation.txt  pdm_webapp.txt  pyocd.txt  xiao_esp32s3.txt  xiao_ra4m1.txt  xiao_samd21.txt
firmware/keys/: root-ed25519.pem
firmware/samples/: samples.doc
firmware/samples/dfu/dfu_01/: CMakeLists.txt  Kconfig.sysbuild  pm_static.yml  pm_static_xiao_nrf54l15_nrf54l15_cpuapp.yml  prj.conf  sysbuild.conf
firmware/samples/dfu/dfu_01/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay  xiao_esp32s3_procpu_sense.overlay  xiao_mg24.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
firmware/samples/dfu/dfu_01/src/: main.c
firmware/samples/dfu/dfu_01/sysbuild/mcuboot/: prj.conf
firmware/samples/dfu/dfu_01/sysbuild/mcuboot/boards/: cy8cproto_063_ble.conf  nrf54lm20dk_nrf54lm20a_cpuapp.conf  xiao_esp32s3_procpu_sense.conf  xiao_esp32s3_procpu_sense.overlay  xiao_mg24.conf  xiao_mg24.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf
firmware/samples/helloworld/: CMakeLists.txt
firmware/samples/spi/spi_02/: CMakeLists.txt  prj.conf
firmware/samples/spi/spi_02/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
firmware/samples/spi/spi_02/src/: main.c
firmware/samples/spi/spi_02/w25qxx/: w25qxx.c  w25qxx.h
firmware/samples/spi/spi_02/ym_print/: ym_print.c  ym_print.h
hardware/learn_xiao_v1/: learn_xiao_v1.kicad_prl  learn_xiao_v1.kicad_pro  learn_xiao_v1.kicad_sch  sym-lib-table
python/pdm/: pdm_serial_parsev1.py
(+144 files in other folders)
